// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ExternalUrl 404 - not found 1`] = `
[
  {
    "format": "unknown",
    "isExternal": true,
    "label": "streamtape.com",
    "meta": {
      "extractorId": "external",
    },
    "ttl": 21600000,
    "url": "https://streamtape.com/e/gjA1OQ4klyHxgJ",
  },
]
`;

exports[`ExternalUrl netu.fanstream.us 1`] = `
[
  {
    "format": "unknown",
    "isExternal": true,
    "label": "netu.fanstream.us",
    "meta": {
      "extractorId": "external",
    },
    "ttl": 21600000,
    "url": "https://netu.fanstream.us/e/0DFgfkcXOsDP",
  },
]
`;
